--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -1,80 +1,42 @@
 
-.font-color-primary{
-    color: var(--color-primary);
-}
-.font-color-secondary{
-  color: var(--color-secondary);
-}
-.font-color-light{
-  color: var(--color-light);
-}
-
-.background-color-primary{
-  background-color: var(--color-primary);
-}
-.background-color-secondary{
-  background-color: var(--color-secondary);
-}
-
-.project-button-width{
-  width: 15rem !important;
-}
-
+.font-color-primary{ color: var(--color-primary);}
+.font-color-secondary{color: var(--color-secondary);}
+.font-color-light{color: var(--color-light);}
+.background-color-primary{background-color: var(--color-primary);}
+.background-color-secondary{background-color: var(--color-secondary);}
+.project-button-width{width: 15rem !important;}
 .slider-image-style{
     height: 90vh;
     max-height: 90vh;
     object-fit: cover;
-}
-
+  }
 .partner-image-style{
     width: auto;
     height: 8rem;
-}
-
-.card-hover {
-  transition: all 0.3s; 
-}
-
+  }
+.card-hover {transition: all 0.3s; }
 .card-hover:hover {
   transform: scale(1.03);
   cursor: pointer; 
 }
-
 .fs-para{ font-size: 0.8rem }
-
-
-.footer-icon{
-   height:4rem;
-   width: auto;
-}
-
-.input-width{
-  width: 4rem;
-}
-
- 
-.light-black-bg{
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
+.input-width{  width: 4rem;}
+.light-black-bg{background-color: rgba(0, 0, 0, 0.5);}
 .visible {
   opacity: 1;
   transform: translateY(0);
   transition: opacity 1s ease, transform 1s ease;
 }
-
 .hidden {
   opacity: 0;
   transform: translateY(100%);
   transition: opacity 1s ease, transform 1s ease;
 }
-
 .slider-image{
   width: 25rem;
   height: 20rem;
   object-fit: cover;
 }
-
 .half-background-primary {
   background-color: var(--color-primary);
   position: absolute;
@@ -84,7 +46,53 @@
   height: 70%; 
   z-index: -1;
 }
-
-.carousel-fade .carousel-inner .carousel-item {
-  transition-duration: 0.5s;
+.carousel-fade .carousel-inner .carousel-item { transition-duration: 0.5s;}
+.input-field-style{
+  border-bottom: 2px solid var(--color-primary) !important ;
+  color: var(--color-primary)!important;
 }
+.input-field-style:focus {
+  outline: none;
+  border: none;
+  opacity: 0.6;
+  border-bottom: 2px solid var(--color-primary) !important;
+}
+.enquiry-icon{height: 1.2rem;}
+.call-icon{height: 1.5rem;}
+.whatsapp-icon{height: 1.6rem;}
+.contact-icon{height: 1.6rem;}
+
+.moving-button {
+  animation: moveUpDown 2s infinite alternate;
+  position: relative;
+}
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px); 
+  }
+}
+
+
+
+/* ...................Media query */
+@media (max-width: 768px) {
+  .project-button-width {width: 9rem !important; }
+  .fs-para{ font-size: 0.7rem ;}
+  .slider-image{
+    width: 18rem;
+    height: 13rem;
+    object-fit: cover;}
+    .enquiry-icon{height: 1rem;}
+    .call-icon{height: 1.2rem;}
+    .whatsapp-icon{height: 1.3rem;}
+    .contact-icon{height: 1.3rem;}
+}
+
+
+
+
+
