--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -31,8 +31,8 @@ body {
   transition: opacity 1s ease, transform 1s ease;
 }
 .slider-image{
-  width: 25rem;
-  height: 20rem;
+  width: 22rem;
+  height: 18rem;
   object-fit: cover;
   transition: transform 0.5s ease;
 }
@@ -107,18 +107,45 @@ body {
     transform: scale(1.1);
   }
   .transparent-section{
-    background-image: url("./../assets/Images/dummyImage.jpg");
+    background-image: url("./../assets/Images/Main Image.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
   }
   .bg-white-transparent{ background-color: rgba(255, 255, 255, 0.781);}
-  .circle-image{
+  .bg-black-transparent{
+    background-color: rgba(0, 0, 0, 0.564);
+  }
+  .circle-image {
     border-radius: 100rem;
     width: 12rem;
     height: 12rem;
     object-fit: cover;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 255, 0.308);
+    transition: box-shadow 0.3s ease;
+  }
+  .circle-image:hover {
+    box-shadow: 0 0 20px 10px rgba(0, 0, 255, 0.408); 
+  }
+  @keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  .loading-spinner {
+    width: 50px;
+    height: 50px;
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid var(--color-primary); 
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: spinner 1.5s linear infinite;
   }
 
   /* ...................Media query */
@@ -133,4 +160,12 @@ body {
     .call-icon{height: 1.2rem;}
     .whatsapp-icon{height: 1.3rem;}
     .contact-icon{height: 1.3rem;}
+    .circle-image {
+      border-radius: 100rem;
+      width: 8rem;
+      height: 8rem;
+      object-fit: cover;
+      box-shadow: 0 0 10px 5px rgba(0, 0, 255, 0.5);
+      transition: box-shadow 0.3s ease;
+    }
   }
