--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -14,7 +14,7 @@ body {
   }
 .card-hover {transition: all 0.3s; }
 .card-hover:hover {
-  transform: scale(1.03);
+  transform: scale(1.1);
   cursor: pointer; 
 }
 .fs-para{ font-size: 0.8rem }
@@ -115,7 +115,7 @@ body {
   }
   .bg-white-transparent{ background-color: rgba(255, 255, 255, 0.781);}
   .bg-black-transparent{
-    background-color: rgba(0, 0, 0, 0.564);
+    background-color: rgba(0, 0, 0, 0.664);
   }
   .circle-image {
     border-radius: 100rem;
@@ -148,6 +148,10 @@ body {
     animation: spinner 1.5s linear infinite;
   }
 
+  .fs-heroSection{
+    font-size: 4rem;
+  }
+
   /* ...................Media query */
 @media (max-width: 768px) {
   .project-button-width {width: 9rem !important; }
@@ -167,5 +171,14 @@ body {
       object-fit: cover;
       box-shadow: 0 0 10px 5px rgba(0, 0, 255, 0.5);
       transition: box-shadow 0.3s ease;
+    }
+    .fs-heroSection{
+      font-size: 3rem;
+    }
+  }
+
+  @media (max-width: 550px) {
+    .fs-heroSection{
+      font-size:1.8rem !important;
     }
   }
