--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -36,8 +36,16 @@ body {
   object-fit: cover;
   transition: transform 0.5s ease;
 }
-.slider-image:hover{
-  transform: scale(1.1);
+.slider-image:hover{ transform: scale(1.1) }
+.about-Img{
+  height: 100%;
+  width:35rem;
+  object-fit: cover;
+}
+.card-image{
+   width: 100%;
+   height: 17rem;
+   object-fit: cover;
 }
 .half-background-primary {
   background-color: var(--color-primary);
@@ -50,18 +58,13 @@ body {
 }
 .carousel-fade .carousel-inner .carousel-item { transition-duration: 0.8s;}
 .input-field-style{
-  border-bottom: 2px solid var(--color-light) !important ;
   color: var(--color-primary)!important;
 }
 .input-field-style:focus {
   outline: none;
   border: none;
-  border-bottom: 3px solid var(--color-primary) !important;
 }
-.input-field-style::placeholder{
-  font-weight: 400;
-  opacity: 0.6;
-}
+
 .contact-page-width{ 
   max-width: 80%;
 }
@@ -115,7 +118,7 @@ body {
   }
   .bg-white-transparent{ background-color: rgba(255, 255, 255, 0.781);}
   .bg-black-transparent{
-    background-color: rgba(0, 0, 0, 0.664);
+    background-color: rgba(0, 0, 0, 0.564);
   }
   .circle-image {
     border-radius: 100rem;
@@ -172,9 +175,8 @@ body {
    .border-red{
     border: 2px solid red;
   }
-  
   .border-black{
-      border: 1.6px solid black;
+      border: 2px solid black;
   }
   .side-error{
     right:-9.5rem;
@@ -250,3 +252,26 @@ body {
       height: auto;
      }
   }
+
+
+  .flag-style{
+    height: 1.2rem;
+    width: 1.6rem ;
+}
+.phone-code-width{
+  width: 2.5rem;
+}
+.input-width{
+  max-width: 100%;
+  width: 28rem;
+}
+.phone-input-width{
+max-width: 100%;
+width: 21rem;
+}
+.width-1halfrem{
+  width: 1.5rem
+}
+.width-halfrem{
+  width: 0.5rem
+}
