--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -38,23 +38,14 @@ body {
 }
 .slider-image:hover{ transform: scale(1.1) }
 .about-Img{
-  height: 100%;
-  width:35rem;
+  height: 30rem;
+  width:100%;
   object-fit: cover;
 }
 .card-image{
    width: 100%;
    height: 17rem;
    object-fit: cover;
-}
-.half-background-primary {
-  background-color: var(--color-primary);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 70%; 
-  z-index: -1;
 }
 .carousel-fade .carousel-inner .carousel-item { transition-duration: 0.8s;}
 .input-field-style{
@@ -140,8 +131,8 @@ body {
     }
   }
   .loading-spinner {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border: 10px solid #f3f3f3;
     border-top: 10px solid var(--color-primary); 
     border-radius: 50%;
@@ -149,6 +140,13 @@ body {
     align-items: center;
     justify-content: center;
     animation: spinner 1.5s linear infinite;
+  }
+  .loading-spinner-container{
+   width: 100%;
+   height: 90vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
   }
   .fs-heroSection{
     font-size: 4rem;}
@@ -194,6 +192,47 @@ body {
     top: 110%;
     }
    }
+
+   /* background-Images */
+   .samanaBg{
+    background-image: url("./../assets/Projects/samana/samanaHero.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
+  .damacBg{
+    background-image: url("./../assets/Projects/damac/damacHero.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
+  .oliviaBg{
+    background-image: url("./../assets/Images/dummyImage.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
+  .oceanzBg{
+    background-image: url("./../assets/Projects/oceanz/oceanzHero.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
+  .vybBg{
+    background-image: url("./../assets/Images/dubaiImage.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+  }
   /* ...................Media query */
 @media (max-width: 768px) {
   .project-button-width {width: 9rem !important; }
