Amenity Icons Remaining

--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -268,6 +268,10 @@ width: 21rem;
   width: 22rem;
   height: auto !important;
 }
+
+.project-input-width{
+  width: 35rem;
+}
   /* ...................Media query */
 @media (max-width: 768px) {
   .project-button-width {width: 9rem !important; }
