MultiStep-Form Created For Project

--- a/DreamHome-Project/src/pages/Custom.css
+++ b/DreamHome-Project/src/pages/Custom.css
@@ -12,6 +12,12 @@ body {
     max-height: 90vh;
     object-fit: cover;
   }
+
+.slider-image-residential{
+  height: 80vh;
+  max-height: 80vh;
+  object-fit: cover;
+}
 .card-hover {transition: all 0.3s; }
 .card-hover:hover {
   transform: scale(1.1);
@@ -290,6 +296,103 @@ width: 21rem;
  .arrow-style{
   font-size: 4rem;
  }
+
+ .active-step{
+  background-color: var(--color-primary); 
+  color: white;
+  font-weight: bold;
+  transform: scale(1.4);
+  transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
+  border: 1px dashed white;
+}
+
+.non-active-step{
+  background-color: rgb(240, 235, 235);
+  color: var(--color-light);
+}
+
+.non-active-step h1{
+  color: var(--color-light);
+}
+
+/* .multiform-dimension{
+  height: 120vh;
+} */
+
+.scrollable {
+  overflow-y: scroll; 
+  max-height: 20rem;
+}
+
+.w-70{
+  max-width: 70%;
+  width: 70%;
+  margin: auto;
+}
+
+.residential-Image{
+  width: 100%;
+  height: 30rem;
+  object-fit: cover;
+}
+
+.residential-Image-sm{
+   width: 100%;
+   height: 14.5rem;
+   object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.position-relative:hover .overlay {
+  opacity: 1;
+}
+
+.overlay span {
+  color: white;
+  font-weight: 500;
+  border-radius: 7px;
+  cursor: pointer;
+  padding: 6px 10px;
+  border: 2px solid white;
+}
+
+.amenity-list-height{
+  height: 30rem;
+  overflow-y: scroll;
+}
+
+.amenity-list-height::-webkit-scrollbar {
+  width: 0.6rem; 
+}
+
+.amenity-list-height::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 2rem;
+}
+
+.amenity-list-height::-webkit-scrollbar-thumb {
+  background: rgba(20, 20, 95, 0.521);
+  border-radius: 2rem;
+
+}
+
+.amenity-list-height::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary);
+}
+
   /* ...................Media query */
 @media (max-width: 768px) {
   .project-button-width {width: 9rem !important; }
@@ -362,6 +465,19 @@ width: 21rem;
         .arrow-style{
           font-size: 3rem;
          }
+         .form-dimension{
+          width: 35rem;
+          height: 33rem;
+       }
+       .scrollable {
+        overflow-y: scroll; 
+        max-height: 18rem;
+      }
+      .w-70{
+        max-width: 100%;
+        width: 100%;
+        margin: auto;
+      }
   }
   .custom-style {
     top: 100%;
@@ -393,6 +509,17 @@ width: 21rem;
      .unit-price-input{
        width: 6rem;
       }
+      .form-dimension{
+        width: 22rem;
+        height: 33rem;
+     }
+     .active-step {
+      background-color: var(--color-primary); 
+      color: white;
+      padding: 20px 10px;
+      border-radius: 6rem;
+      font-weight: bold;
+    }
   }
 
 
